--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,13 +21,11 @@ jobs:
         id: get_version
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
       
-      - name: Select Xcode version
-        run: sudo xcode-select -s /Applications/Xcode_15.2.app/Contents/Developer
-      
       - name: Show build environment
         run: |
           echo "Building version: ${{ steps.get_version.outputs.VERSION }}"
           xcodebuild -version
+          xcode-select -p
           sw_vers
       
       - name: Build app
