Fix: Disable code signing for GitHub Actions builds
- Add CODE_SIGN_IDENTITY, CODE_SIGNING_REQUIRED, CODE_SIGNING_ALLOWED flags
- Allows builds to complete on GitHub Actions without certificates
- Apps built by CI are unsigned (for testing/distribution only)

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -30,6 +30,9 @@ jobs:
             -scheme EyeReminder \
             -configuration Debug \
             -derivedDataPath ./build \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO \
             build
       
       - name: Verify build output
